# spoofloc

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: build-package.yml
packaging/: make-dmg.sh
spoofloc/: cli.py  config.py  device.py  exceptions.py  geocode.py  location.py  motion.py  route.py  routing.py  sleep.py  tunnel.py
spoofloc/web/: server.py
spoofloc/web/static/: index.html  sw.js
tests/: test_config.py  test_device.py  test_geocode.py  test_location_route_session.py  test_route.py  test_tunnel.py  test_web_server.py
