[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spoofloc"
version = "0.1.0"
description = "iOS location spoofing CLI with map UI"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    "pymobiledevice3>=4.14",
    "click>=8.1",
    "flask>=3.0",
    "geopy>=2.4",
    "certifi>=2024.0.0",
    "platformdirs>=4.0",
    "tomli-w>=1.0",
    "waitress>=3.0",
    "httpx>=0.27",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "responses>=0.25",
]

[project.scripts]
spoofloc = "spoofloc.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["spoofloc"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
